<resources>
    <string name="app_name">UniCaroneiro</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirmar Senha</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_note">Anotação</string>
    <string name="prompt_phoneNumber">Telefone</string>
    <string name="prompt_studentRegister">Registro do Aluno</string>
    <string name="prompt_university">Universidade</string>
    <string name="prompt_accessType">Tipo de Acesso</string>
    <string name="prompt_accessType_caroneiro">Caroneiro - Fornece carona</string>
    <string name="prompt_accessType_carona">Carona - Utiliza carona</string>
    <string name="prompt_address_origin">Endereço de Origem</string>
    <string name="prompt_address_destiny">Endereço de Destino</string>
    <string name="prompt_students_allowed">Quantos alunos podem ir com você?</string>
    <string name="prompt_value_rent">Qual valor da carona mensal ?</string>
    <string name="promt_value_required">Valor cobrado</string>
    <string name="action_register">Registrar</string>
    <string name="action_link_to_register">Ainda não é membro? Registre-se agora!</string>
    <string name="action_sign_in">Logar</string>
    <string name="action_sign_in_label">Logar no Unicaroneiro</string>
    <string name="action_sign_in_facebook">Logar com Facebook</string>
    <string name="action_sign_in_google">Logar com Google</string>
    <string name="action_update">Atualizar</string>
    <string name="action_delete">Deletar</string>
    <string name="action_reset">Resetar</string>
    <string name="action_sign_out">Sair</string>
    <string name="action_continue">Continuar</string>
    <string name="action_update_email">Confirmar Alteração de Email</string>
    <string name="action_update_password">Confirmar Alteração de Senha</string>
    <string name="action_update_register">Confirmar Alteração de Cadastro</string>
    <string name="action_ok">Ok :)</string>
    <string name="action_make_contact">Entrar em contato</string>
    <string name="action_qualify">Efetuar qualificação</string>
    <string name="action_take_picture">Tirar Foto</string>
    <string name="action_finish_register">Finalizar Cadastro</string>
    <string name="error_invalid_email">Esse endereço de email é inválido</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="info_label">Informação do usuário</string>
    <string name="error_url_not_found">URL Inválida : Arquivo PHP não encontrado</string>
    <string name="error_passoword_length">Senha deve ter pelo menos 5 caracteres</string>
    <string name="error_passoword_match">As senhas digitadas devem ser iguais</string>
    <string name="error_email_match">Os emails digitados devem ser iguais</string>
    <string name="error_accessType">Cadastre seu tipo de acesso</string>
    <string name="error_addressOrigin">Cadastre o endereço de origem</string>
    <string name="error_addressDestiny">Cadastre o endereço de destino</string>
    <string name="error_accessType_caroneiro">Digite a quantidade de Caronas disponíveis</string>
    <string name="error_accessType_caroneiro_value">Digite o valor das caronas.</string>
    <string name="error_phone_required">É obrigatório atualizar o número de telefone</string>

    <string name="action_settings">Configurações</string>
    <string name="action_logout">Logout</string>
    <string name="action_see_details"> + informações</string>
    <string name="backdrop_title">FIAP</string>
    <string name="backdrop_subtitle">Lista de Caroneiros Disponíveis</string>

    <!-- Toast Messages-->
    <string name="prompt_welcome">Bem vindo ao Unicaroneiro!</string>
    <string name="prompt_welcome_back">Bem vindo de volta :)</string>
    <string name="prompt_invalid_access">O usuário ou senha estão incorretos</string>

    <!-- Universities -->
    <string name="FIAP">FIAP</string>

    <!-- Dialog Messages -->
    <string name="action_confirm_logout">Tem certeza que deseja realiza o Logout?</string>

    <!-- Update Messages -->
    <string name="prompt_change_email">Alterar Email</string>
    <string name="prompt_change_email_update">Novo Email</string>
    <string name="prompt_change_current_email">Confirmar Email Atual</string>
    <string name="prompt_change_email_update_confirm">Confirmar Novo Email</string>
    <string name="prompt_change_password">Alterar Senha</string>
    <string name="prompt_change_password_update">Nova Senha</string>
    <string name="prompt_change_password_update_confirm">Confirmar Nova Senha</string>
    <string name="prompt_change_register">Alterar Dados Cadastrais</string>
    <string name="prompt_change_name">Novo Nome</string>
    <string name="prompt_change_phoneNumber">Novo Telefone</string>
    <string name="prompt_change_university">Nova Universidade</string>
    <string name="prompt_change_accessType">Atualizar Tipo de Acesso</string>
    <string name="prompt_change_address_origin">Novo Endereço de Origem</string>
    <string name="prompt_change_address_destiny">Novo Endereço de Destino</string>
    <string name="prompt_change_value_for_rent">Novo Valor de Cobrança</string>
    <string name="prompt_change_student_register">Novo Registro do Aluno na Universidade</string>
</resources>

