<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/thumbail_student_information"
            android:layout_width="match_parent"
            android:layout_height="@dimen/student_cover_height"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_name" />

        <TextView
            android:id="@+id/student_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email" />

        <TextView
            android:id="@+id/student_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_phoneNumber" />

        <Button
            android:id="@+id/btn_dismiss"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_ok"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>